tests/NormalTests/paczka1/small_fuzzy/12800546.err
Error in line 2: bsjp S504 30,!
Error in line 4: 0TQ1LKfKkZ S347 46,9
Error in line 3: bsjp S504 110,2
Error in line 7: bsjp A734 85,4
